z-index=1 fixes the stackign order problem

--- a/CSS/content-nav.css
+++ b/CSS/content-nav.css
@@ -156,6 +156,7 @@ button a {
       width: 100%;
       height: 50px;
      overflow: visible;
+     z-index: 1;
     }
     .menu-toggle
      {
@@ -273,8 +274,9 @@ button{
 }
 
 .Gif img{
-    filter: grayscale(100%);
+    filter: grayscale(90%);
     margin: -5px ;
+   
 }
 
 .Gif{
@@ -283,6 +285,7 @@ button{
     border-radius: 10px;
     border: 1px solid #e0e0e0;
     overflow: hidden;
+    
 }
 
 .Gif button{
